<resources>
<!--    Todos los strings que son estaticos dentro del sistema-->
    <string name="nombre_app">NutriFlow</string>
    <string name="mi_nombre">Franklin Andres Cortés González</string>
    <string name="msj_inicio">Inicia una nueva aventura con NutriFlow y descubre una nueva forma de ver el mundo</string>
    <string name="comienzo">Comienza</string>
    <string name="registro">Registrate</string>
    <string name="msj_inicio_sesion">La aventura está por iniciar, por favor inicia sesión</string>
    <string name="ingreso">Ingresar</string>
    <string name="recuperar_contrasena">Recupera Tu Contraseña</string>
    <string name="ingreso_google">Ingresa con Google</string>
    <string name="msj_cuenta_inexistente">No tienes cuenta?</string>
    <string name="ttl_registro">Crear cuenta</string>
    <string name="msg_registro">Únete a nuestra comunidad y disfruta de todos los beneficios.</string>
    <string name="terminos">He leido y acepto los terminos y condiciones.</string>
    <string name="ttl_recuperar_contraseña">Recuperar contraseña</string>
    <string name="msg_recuperar_contraseña">Ingresa tu correo electrónico registrado y te enviaremos un enlace para restablecer tu contraseña.</string>
    <string name="enviar_enlace">Enviar enlace</string>
    <string name="label_correo">Correo electrónico</string>
    <string name="label_telefono">Teléfono</string>
    <string name="edit_perfil">Editar perfil</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="inicio">Inicio\n</string>
    <string name="productos">Productos</string>
    <string name="navigation_drawer_open">Abrir</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="ejemploProducto">Vitaminas drasanvi</string>
    <string name="ejemploDescProducto">Importante para la visión, el sistema inmunológico y la salud de la piel.</string>
    <string name="ejemploPrecioProducto">$68.000</string>
    <string name="ejemploDisponiProducto">6 disponibles</string>
    <string name="ejemploCarroProducto">Añadir al carrito</string>
    <string name="añadirACarro">Añadir al carrito</string>
    <string name="placeholderNombre">Nombre</string>
    <string name="placeholderCorreo">Correo</string>
    <string name="placeholderTelefono">Telefono</string>
    <string name="editFotoPerfil">Cambiar foto de perfil</string>
    <string name="electronica">Electrónica</string>
    <string name="productos_electronica">150 productos</string>
    <string name="ropa">Ropa</string>
    <string name="productos_ropa">303 productos</string>
    <string name="hogar">Hogar</string>
    <string name="productos_hogar">50 productos</string>
    <string name="deportes">Deportes</string>
    <string name="productos_deportes">85 productos</string>
    <string name="accesorios">Accesorios</string>
    <string name="productos_accesorios">120 productos</string>
    <string name="informacionTienda">Encuentra todo en un solo lugar: ropa, accesorios, artículos para el hogar, productos deportivos y tecnología. Variedad, calidad y buenos precios.</string>
    <string name="mi_perfil">Mi perfil</string>
    <string name="categorias">Categorias</string>
    <string name="carrito">Carrito de compras</string>
    <string name="guardar">Guardar</string>
    <string name="ejemploProductoHogar">Clorox morado</string>
    <string name="ejemploDescProductoHogar">Manten tu hogar limpio con el nuevo clorox morado que elimina el 99.9% de las bacterias</string>
    <string name="ejemploPrecioProductoHogar">$12.000</string>
    <string name="ejemploDisponiProductoHogar">26 disponibles</string>
    <string name="ejemploProductoDeporte">Estacas para cancha de futbol</string>
    <string name="ejemploDescProductoDeportes">Estacas amarillas de 1.80 metros de alto con punta de acero</string>
    <string name="ejemploPrecioProductoDeportes">$120.000</string>
    <string name="ejemploDisponiProductoDeportes">10 disponibles</string>
    <string name="ejemploProductoAccesorios">Cadena de oro</string>
    <string name="ejemploDescProductoAccesorios">"Cadena en Oro 18k para hombre tejido 3*1 peso "</string>
    <string name="ejemploPrecioProductoAccesorios">$250.000</string>
    <string name="ejemploDisponiProductoAccesorios">10 disponibles</string>
    <string name="ejemploProductoRopa">Gorra azul New Era</string>
    <string name="ejemploDescProductoRopa">Gorra plana en gamusa diseño Los Angeles</string>
    <string name="ejemploPrecioProductoRopa">$120.000</string>
    <string name="ejemploDisponiProductoRopa">23 disponibles</string>
    <string name="ejemploProductoElectronica">Iphone 13</string>
    <string name="ejemploDescProductoElectronica">Sistema avanzado de dos cámaras · Cámara Fusion de 48 MP · Teleobjetivo de 2x · Cámara ultra gran angular de 12 MP</string>
    <string name="ejemploPrecioProductoElectronica">$2.599.900</string>
    <string name="ejemploDisponiProductoElectronica">82 disponibles</string>
    <string name="campoNombre">Nombre</string>
    <string name="campoCorreo">Correo</string>
    <string name="campoTelefono">Teléfono</string>
    <string name="campoApellidos">Apellidos</string>
    <string name="textBtnPagar">Pagar</string>
</resources>